--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
     "presets": ["env", "stage-0"],
-    "plugins": ["transform-runtime", ["component", [
+    "plugins": ["transform-runtime",["import", {
+        "libraryName": "vant",
+        "libraryDirectory": "es",
+        "style": true
+      }],["component", [
         {
           "libraryName": "mint-ui",
           "style": true
