--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "mint-ui": "^2.2.13",
+    "vant": "^2.1.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.1"
   },
@@ -23,6 +24,7 @@
     "babel-helpers": "^6.24.1",
     "babel-loader": "^7.1.5",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-import": "^1.12.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
