--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --hot"
+    "dev": "webpack-dev-server --hot --host 192.168.1.160 --disable-host-check"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "mint-ui": "^2.2.13",
     "vant": "^2.1.1",
     "vue": "^2.6.10",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.1.1"
   },
   "devDependencies": {
