--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "mint-ui": "^2.2.13",
+    "muse-ui": "^3.0.2",
     "vant": "^2.1.1",
     "vue": "^2.6.10",
     "vue-resource": "^1.5.1",
