--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "slash": "^3.0.0",
     "style-loader": "^1.0.0",
     "url-loader": "^2.1.0",
