--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --hot --host --disable-host-check"
+    "dev": "webpack-dev-server --hot --host 192.168.5.90 --disable-host-check"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "muse-ui": "^3.0.2",
     "vant": "^2.1.1",
     "vue": "^2.6.10",
+    "vue-preview": "^1.1.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.1"
   },
