过滤mui.min.js  使用numbox组件-mui 及美化

--- a/.babelrc
+++ b/.babelrc
@@ -9,5 +9,8 @@
           "libraryName": "mint-ui",
           "style": true
         }
-      ]]]
+      ]]],
+      "ignore": [
+        "src/lib/mui/js/mui.min.js",
+        ]
 }
