购物车数量增加

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --hot --host 192.168.191.1 --disable-host-check"
+    "dev": "webpack-dev-server --hot --host 192.168.1.160 --disable-host-check"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,8 @@
     "vue": "^2.6.10",
     "vue-preview": "^1.1.3",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.1.1"
+    "vue-router": "^3.1.1",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
